# client

./: .gitignore  .gitmodules  CONTRIBUTING.md  Client.gd  Client.tscn  Layers.txt  README.md  ServerListener.gd  Startup.gd  Startup.tscn  client.tscn  export_presets.cfg  grass_curve.tscn  icon.svg.import  init.gd  init.tscn  launch.gd  launch.tscn  openchamp.svg.import  project.godot  run.bat  run.sh  startup.gd  startup.tscn
Characters/: Archer.tscn  Base_Hero.gd  Champion.tscn  Enemy.tscn  Minion.tscn  Player.tscn  RespawnTimer.gd  Unit.tscn  champion.tscn  minion.tscn  player.tscn  player_input.gd  respawn_timer.gd  unit.tscn
Client/: Client.gd  Client.tscn
Effects/: Arrow.tscn  AutoProjectile.gd  MoveMarker.gd  MoveMarker.tscn  arrow.tscn  auto_projectile.gd  move_marker.gd  move_marker.tscn  tower_blast.tscn
Environment/: Crystal_spin.gd  Grass.tscn  MinionSpawner.tscn  Nexus.tscn  Tower.tscn  Turret.tscn  grass4.tscn  minion_spawner.tscn  nexus.tscn  turret.tscn
Maps/: Bridge.tscn  DebugMap.gd  DebugMap.tscn  Falloff.tscn  WorldNav.gd  debug_map.gd  debug_map.tscn  debug_map_5v5.gd  debug_map_5v5.tscn
OLD/: Client.tscn  Server.gd  Server.tscn  Test.gd  Test.tscn
Scripts/: Client.gd  (+11 more)
extensions/: CMakeLists.txt
extensions/include/: base_include.hpp  data_cache_manager.hpp  dynamic_asset_indexer.hpp  dynamic_asset_loader.hpp  identifier.hpp  register_types.hpp
extensions/scripts/: compile.py
extensions/src/: data_cache_manager.cpp  dynamic_asset_indexer.cpp  dynamic_asset_loader.cpp  identifier.cpp  indexing_functions.cpp  register_types.cpp
(+400 files in other folders)
